--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jokenpo</title>
+    <link rel="stylesheet" href="estilo/style.css">
+    <script src="scritp/script.js"></script>    
 </head>
 <body>
     <main>
@@ -13,4 +15,5 @@
         </header>
     </main>
 </body>
+
 </html>
